--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "underscore": "^1.11.0"
     },
     "scripts": {
-        "start": "node ./server/server.js",
+        "start": "node server/server.js",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
