--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@testing-library/user-event": "^7.1.2",
         "bcrypt": "^5.0.0",
         "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.10.6",
         "mongoose-unique-validator": "^2.0.3",
         "react": "^16.13.1",
