Login with google sign in

--- a/package.json
+++ b/package.json
@@ -3,16 +3,28 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@material-ui/core": "^4.11.0",
+        "@material-ui/icons": "^4.9.1",
+        "@material-ui/lab": "^4.0.0-alpha.56",
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
         "@testing-library/user-event": "^7.1.2",
+        "axios": "^0.20.0",
         "bcrypt": "^5.0.0",
+        "bootstrap": "^4.5.2",
+        "cors": "^2.8.5",
         "express": "^4.17.1",
+        "google-auth-library": "^6.1.0",
+        "history": "^5.0.0",
         "jsonwebtoken": "^8.5.1",
-        "mongoose": "^5.10.6",
+        "mongodb": "^3.6.2",
+        "mongoose": "^5.10.7",
         "mongoose-unique-validator": "^2.0.3",
         "react": "^16.13.1",
+        "react-bootstrap": "^1.3.0",
         "react-dom": "^16.13.1",
+        "react-google-login": "^5.1.21",
+        "react-router-dom": "^5.2.0",
         "react-scripts": "^3.4.3",
         "underscore": "^1.11.0"
     },
@@ -20,7 +32,8 @@
         "start": "node server/server.js",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "startReact": "react-scripts start"
     },
     "eslintConfig": {
         "extends": "react-app"
