--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
         "underscore": "^1.11.0"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "start": "node server/server.js",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "startReact": "node server/server.js"
+        "startReact": "react-scripts start"
     },
     "eslintConfig": {
         "extends": "react-app"
