--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
         "bootstrap": "^4.5.2",
         "cors": "^2.8.5",
         "express": "^4.17.1",
+        "express-fileupload": "^1.2.0",
         "google-auth-library": "^6.1.0",
         "history": "^5.0.0",
         "jsonwebtoken": "^8.5.1",
         "mongodb": "^3.6.2",
         "mongoose": "^5.10.7",
         "mongoose-unique-validator": "^2.0.3",
+        "nodemon": "^2.0.6",
         "react": "^16.13.1",
         "react-bootstrap": "^1.3.0",
         "react-dom": "^16.13.1",
